[package]
name = "rdss"
description = "Rust Data Storage System"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/LeviLovie/rdss"
repository = "https://github.com/LeviLovie/rdss"
documentation = "https://docs.rs/rdss"
version = "0.2.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
